fix: Match width of `<blockquote>` and wrapping `<p>` (#350)

--- a/src/assets/style/global.sass
+++ b/src/assets/style/global.sass
@@ -130,8 +130,9 @@ p
 
     blockquote
       background-color: #efefef
-      margin: 30px 50px
+      margin: 30px auto
       padding: 20px 30px
+      box-sizing: border-box
 
       @include rmq()
         margin: 30px 25px
